[tool.poetry]
name = "workspace"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
opencv-python = "4.5.1.48"
torchvision = "0.8.2"
tqdm = "4.56.0"
jupyterlab = "3.6.1"
ipywidgets = "8.0.4"
matplotlib = "3.7.1"
pandas = "2.0.0"
scikit-image = "0.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
